2008-07-21  Sam Steingold  <sds@gnu.org>

	fix "-x ... -repl", broken since 2008-01-06
	* reploop.lisp (main-loop): accept an optional exit argument
	* spvw.d (main_actions): pass !p->argv_repl to MAIN-LOOP
	* makemake.in (check-script): test "-x ... -repl"

2008-07-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (ANSI_CLISP): add "-p CL-TEST"
	(check-ansi-tests, check-ansi-tests-debug, check-ansi-tests-compiled)
	(check-ansi-tests-compiled-debug): remove IN-PACKAGE from -x

2008-07-21  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2022362 ]: Problem :external-format :dos and (setf
	stream-element-type): after a ((setf stream-element-type)
	'(unsigned-byte 8)) after read-line on a :dos stream
	an NL byte (10) is read from the stream
	* stream.d (rd_by_iau8_unbuffered, rd_by_array_iau8_unbuffered)
	(rd_by_iau8_buffered, rd_by_array_iau8_buffered): respect
	ChannelStream_ignore_next_LF

2008-07-21  Sam Steingold  <sds@gnu.org>

	* pathname.d (check_file_reopen): when *REOPEN-OPEN-FILE* is WARN,
	issue a warning instead of signaling an error
	* constsym.d (check_file_reopen): declare
	* spvw.d (init_symbol_values): init *REOPEN-OPEN-FILE* to ERROR
	* utils/clispload.lsp (*reopen-open-file*): set to WARN to pacify
	6 tests

2008-07-21  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*pprint-first-newline*): set to NIL to
	conform to Paul's expectations

2008-07-21  Sam Steingold  <sds@gnu.org>

	* encoding.d: do not #include <stdio.h>, it is already done by lispbibl

2008-07-20  Sam Steingold  <sds@gnu.org>

	* pprint.lisp (copy-pprint-dispatch): as per ANSI, when no table
	is specified, return a COPY of *PRINT-PPRINT-DISPATCH*, not its value

2008-07-20  Sam Steingold  <sds@gnu.org>

	* io.d (justify_empty_2): concatenate all strings in a single-liner
	into one string instead of pushing all the components into the block

2008-07-18  Sam Steingold  <sds@gnu.org>

	* io.d (paren_open): a minor simplification
	(print): remove an unused static function